書き換え版(+α)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WebAPI</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h3>入力フォーム</h3>
@@ -10,6 +11,10 @@
         <dt>学籍番号</dt>
         <dd>
             <input type="text" name="no">
+        </dd>
+        <dt>氏名</dt>
+        <dd>
+            <input type="text" name="name">
         </dd>
         <dt>点数</dt>
         <dd>
